--- a/index.html
+++ b/index.html
@@ -25,9 +25,12 @@
 		<div class='skills'><h2 style="	padding-bottom:1.5em;">Updates</h2>
 
 <ul>
- <li><p><STRONG>Jul 06 | </STRONG>If you've been keeping up with the news lately it's troubling. People who are interested in privacy, linux, tor, reddit, or BoingBoing are now considered 'extremists' and targeted by the NSA. Privacy is a human right people, that's why you wear clothes, that's why journals were invented, it's why we whisper secrets instead of shouting them on top of mountains. Everyone is entitled to privacy and security. It was never meant to be held in the power of the few but spread to the masses. </p></li><br>
+ <li><p><STRONG>Jul 06 | </STRONG>If you've been keeping up with the news lately it's troubling. People who are interested in privacy, linux, tor, reddit, or BoingBoing are now considered 'extremists' and targeted by the NSA. Privacy is a human right people, that's why you wear clothes, that's why journals were invented, it's why we whisper secrets instead of shouting them on top of mountains. Everyone is entitled to privacy and security. It was never meant to be held in the power of the few but spread to the masses. </p>
+ 	<p><a href="blog/posts/privacy.html">Privacy</a> </p></li><br>
 
 </ul>
+<br>
+<center><a href="http://for.gwenbell.com"><img src="http://gwenbell.com/images/for-button.png" ></a></center>
 			</div>
 				<hr>
 
