status, jr css update, rm junk

--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
 		<div class='skills'><h2 style="	padding-bottom:1.5em;">Updates</h2>
 
 <ul>
- <li><p><STRONG>Jul 06 | </STRONG>If you've been keeping up with the news lately it's troubling. People who are interested in privacy, linux, tor, reddit, or BoingBoing are now considered 'extremists' and targeted by the NSA. Privacy is a human right people, that's why you wear clothes, that's why journals were invented, it's why we whisper secrets instead of shouting them on top of mountains. Everyone is entitled to privacy and security. It was never meant to be held in the power of the few but spread to the masses. </p>
- 	<p><a href="blog/posts/privacy.html">Privacy</a> </p></li><br>
+ <li><p><STRONG>Jul 07 | </STRONG> Taking today slowly after a bout of food poisoning via pasta sauce. Lot's of chai tea and finishing up Letters to a Stoic by Senecca. </p>
+ </li><br>
 
 </ul>
 <br>
