status, rm portfolio, edited about

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 		<div class='skills'><h2 style="	padding-bottom:1.5em;">Updates</h2>
 
 <ul>
- <li><p><STRONG>Jul 07 | </STRONG> Taking today slowly after a bout of food poisoning via pasta sauce. Lot's of chai tea and finishing up Letters to a Stoic by Senecca. </p>
+ <li><p><STRONG>Jul 08 | </STRONG> Found an old country store with 'used' groceries. Reminds of the 'used' liquor stores of Japan. </p>
  </li><br>
 
 </ul>
