--- a/underconstruction/portfolio.html
+++ b/underconstruction/portfolio.html
@@ -2,15 +2,20 @@
 <html>
 <head>
 <title>Meira D.</title>
-	<link rel="stylesheet" type="text/css" href="main.css">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet" type="text/css" href="css/main.css">
 	<link rel="stylesheet" type="text/css" href="css/component.css" />
 	<link rel="stylesheet" type="text/css" href="css/default.css" />
-	<link rel="stylesheet" href="animate.css">
+	<link rel="stylesheet" href="css/animate.css">
 	<script src="js/modernizr.custom.js"></script>
+	 <script src="js/jr.js"></script>
 </head>
 <body>
-	<div class='portfolio'>
-			<h2 style="	padding-bottom:1.5em;">Portfolio</h2>
+		<nav class='nav'>
+
+</nav>
+		
+			<h1 style="	padding-bottom:1.5em; padding-top:2em; padding-left:2em;">Portfolio</h1>
 	
 			<ul id="og-grid" class="og-grid">
   		<li>
@@ -49,8 +54,11 @@
 						</a>
 					</li>
 </ul>
-		</div><hr>
+		
+		<footer style='height:9em !important'></footer>
+
 </body>
+
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 		<script src="js/grid.js"></script>
 		<script>
