--- a/index.html
+++ b/index.html
@@ -25,8 +25,10 @@
 		<div class='skills'><h2 style="	padding-bottom:1.5em;">Updates</h2>
 
 <ul>
+
  <li><p><STRONG>Jul 08 | </STRONG> Found an old country store with 'used' groceries. Reminds of the 'used' liquor stores of Japan. </p>
  </li><br>
+><p>Am I for my current setup? Yes. I run an elementary linux os with less than 20 gb's used, which I maintain and pair down all the time. I have hotkeys, blacklists, you name it. Anything and everything to keep my computer from getting filled with junk and so custom if you sneeze something unexpected might happen. And that's how a computer is supposed to be custom and aligned. </p></li><br>
 
 </ul>
 <br>
