--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
 <ul>
 
- <li><p><STRONG>Jul 09 | </STRONG>  Lot's of programming today. Catching up on the news. Spending time with my dog and blackberry toast and chai.</p>
+ <li><p><STRONG>Jul 13 | </STRONG> Went to a farmer's market and someone gave us a homemade apple pie and fresh baked bread. Watched a blue tailed lizzard run around while eating ice cream in the forrest. Bought a vintage t-shirt and looked at fossils. Full day. </p>
  </li><br>
 
 </ul>
