--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
 
 <ul>
 
- <li><p><STRONG>Jul 13 | </STRONG> Went to a farmer's market and someone gave us a homemade apple pie and fresh baked bread. Watched a blue tailed lizzard run around while eating ice cream in the forrest. Bought a vintage t-shirt and looked at fossils. Full day. </p>
+ <li><p><STRONG>Jul 13 | </STRONG> Went to a farmer's market and someone gave us a homemade apple pie and fresh baked bread. Watched a blue tailed lizzard run around while eating ice cream in the forrest. Bought a vintage t-shirt and looked at fossils. Full day. </p><br>
+ <p>I am for <a href="blog/posts/breathingroom.html">breathing room</a>.</p>
  </li><br>
 
 </ul>
