--- a/index.html
+++ b/index.html
@@ -26,13 +26,11 @@
 
 <ul>
 
- <li><p><STRONG>Jul 13 | </STRONG> Went to a farmer's market and someone gave us a homemade apple pie and fresh baked bread. Watched a blue tailed lizzard run around while eating ice cream in the forrest. Bought a vintage t-shirt and looked at fossils. Full day. </p><br>
- <p>I am for <a href="blog/posts/breathingroom.html">breathing room</a>.</p>
+ <li><p><STRONG>Jul 14 | </STRONG> Moved first letter into the archive. Going to be writing in my journal today instead of the web. Need some time to get things together in my head, maybe run some errands, be present. </p><br>
  </li><br>
 
 </ul>
 <br>
-<center><a href="http://for.gwenbell.com"><img src="http://gwenbell.com/images/for-button.png" ></a></center>
 			</div>
 				<hr>
 
