--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
 	<nav class='nav'>
  <a href="index.html">Home</a>
  <a href="blog/about.html">About</a>
- <a href="portfolio.html">Projects</a>
   <a href="blog/archive.html">Archive</a>
 </nav>
 
@@ -25,6 +24,8 @@
 		<div class='skills'><h2 style="	padding-bottom:1.5em;">Updates</h2>
 
 <ul>
+	 <li><p><STRONG>Jul 16 | </STRONG> It's another beautiful cool summer day in the U.S. Hoping it will stay that way but not convinced that it will. </p><br>
+ </li><br>
 
  <li><p><STRONG>Jul 14 | </STRONG> Moved first letter into the archive. Going to be writing in my journal today instead of the web. Need some time to get things together in my head, maybe run some errands, be present. </p><br>
  </li><br>
