--- a/index.html
+++ b/index.html
@@ -25,14 +25,14 @@
 
 <ul>
  
-		 <li><p><STRONG>Jul 17 | </STRONG> Another hard day at work. Getting back to writing a piece of fiction I have worked on in a solid year and lots of ideas are coming up on how to narrow the plot. </p><br>
+  <li><p><STRONG>Jul 18 | </STRONG>  Catching up on the news and freaking out at all the sh!t that's happened just since yesterday.</p><br>
+ </li><br>
+		 <li><p><STRONG>Jul 17 | </STRONG> Another hard day at work. Getting back to writing a piece of fiction I haven't worked on in a solid year and lots of ideas are coming up on how to narrow the plot. </p><br>
  </li><br>
 
 	 <li><p><STRONG>Jul 16 | </STRONG> It's another beautiful cool summer day in the U.S. Hoping it will stay that way but not convinced that it will. </p><br>
  </li><br>
 
- <li><p><STRONG>Jul 14 | </STRONG> Moved first letter into the archive. Going to be writing in my journal today instead of the web. Need some time to get things together in my head, maybe run some errands, be present. </p><br>
- </li><br>
 
 </ul>
 <br>
