--- a/index.html
+++ b/index.html
@@ -23,9 +23,10 @@
 
 		<div class='skills'><h2 style="	padding-bottom:1.5em;">Updates</h2>
 
-<ul>
- 
-  <li><p><STRONG>Jul 18 | </STRONG>  Catching up on the news and freaking out at all the sh!t that's happened just since yesterday.</p><br>
+ <li><p><STRONG>Jul 20 | </STRONG>  Programming a new site and working on my fiction all day since I'm not going to the Farmer's Market. What do you do on Sundays? </p><br>
+ </li><br>
+
+  <li><p><STRONG>Jul 18 | </STRONG>  Catching up on the news and freaking out at all the sh!t that's happened just since yesterday. </p><br>
  </li><br>
 		 <li><p><STRONG>Jul 17 | </STRONG> Another hard day at work. Getting back to writing a piece of fiction I haven't worked on in a solid year and lots of ideas are coming up on how to narrow the plot. </p><br>
  </li><br>
