--- a/index.html
+++ b/index.html
@@ -22,19 +22,14 @@
 </p><hr>
 
 		<div class='skills'><h2 style="	padding-bottom:1.5em;">Updates</h2>
+<ul>
+		<li><p><STRONG>Jul 21 | </STRONG>  Reading E.B.'s post on Trolls. Writing a super long post on how to write fiction for all you creatives out there.</p><br>
+ 		</li><br>
+ 		<li><p><STRONG>Jul 20 | </STRONG>  Programming a new site and working on my fiction all day since I'm not going to the Farmer's Market. What do you do on Sundays? </p><br>
+ 		</li><br>
 
- <li><p><STRONG>Jul 20 | </STRONG>  Programming a new site and working on my fiction all day since I'm not going to the Farmer's Market. What do you do on Sundays? </p><br>
- </li><br>
-
-  <li><p><STRONG>Jul 18 | </STRONG>  Catching up on the news and freaking out at all the sh!t that's happened just since yesterday. </p><br>
- </li><br>
-		 <li><p><STRONG>Jul 17 | </STRONG> Another hard day at work. Getting back to writing a piece of fiction I haven't worked on in a solid year and lots of ideas are coming up on how to narrow the plot. </p><br>
- </li><br>
-
-	 <li><p><STRONG>Jul 16 | </STRONG> It's another beautiful cool summer day in the U.S. Hoping it will stay that way but not convinced that it will. </p><br>
- </li><br>
-
-
+  		<li><p><STRONG>Jul 18 | </STRONG>  Catching up on the news and freaking out at all the sh!t that's happened just since yesterday. </p><br>
+ 		</li><br>
 </ul>
 <br>
 			</div>
