status, letter(death),archive

--- a/index.html
+++ b/index.html
@@ -23,12 +23,14 @@
 
 		<div class='skills'><h2 style="	padding-bottom:1.5em;">Updates</h2>
 <ul>
-		<li><p><STRONG>Jul 21 | </STRONG>  Reading E.B.'s post on Trolls. Writing a super long post on how to write fiction for all you creatives out there.</p><br>
- 		</li><br>
- 		<li><p><STRONG>Jul 20 | </STRONG>  Programming a new site and working on my fiction all day since I'm not going to the Farmer's Market. What do you do on Sundays? </p><br>
+
+	<li><p><STRONG>Jul 29| </STRONG> I haven't written in a few days. Truth be told, I haven't had it in me. My cousin just died in a motorbike accident at 13 years old. There's more, but I'd rather not put it out for the entire world to see. ... <a href="blog/posts/death.html">read more.</a></p><br>
  		</li><br>
 
-  		<li><p><STRONG>Jul 18 | </STRONG>  Catching up on the news and freaking out at all the sh!t that's happened just since yesterday. </p><br>
+	<li><p><STRONG>Jul 27| </STRONG> I've been so busy I haven't had time to finish writing that lengthy post yet. I promise I will eventually get it done. In other news, I recently bought a pair of GoTenna (PGP encrypted cell phone communication over radio waves). Great if you're lost in the great outdoors. </p><br>
+ 		</li><br>
+
+		<li><p><STRONG>Jul 21 | </STRONG>  Reading E.B.'s post on Trolls. Writing a super long post on how to write fiction for all you creatives out there.</p><br>
  		</li><br>
 </ul>
 <br>
