--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
 		<div class='skills'><h2 style="	padding-bottom:1.5em;">Updates</h2>
 <ul>
 
+<li><p><STRONG>Aug 05| </STRONG> Hey everyone, It's been a while. I've been getting ready for the funeral, talking about politics, and ordering DELF & HiSET exam books. I'll write again next week. I don't know if I'll be able to write before then because of everything going on. Wish me luck.</p><br>
+ 		</li><br>
+
 	<li><p><STRONG>Jul 29| </STRONG> I haven't written in a few days. Truth be told, I haven't had it in me. My cousin just died in a motorbike accident at 13 years old. There's more, but I'd rather not put it out for the entire world to see. ... <a href="blog/posts/death.html">read more.</a></p><br>
  		</li><br>
 
