--- a/index.html
+++ b/index.html
@@ -24,17 +24,10 @@
 		<div class='skills'><h2 style="	padding-bottom:1.5em;">Updates</h2>
 <ul>
 
-<li><p><STRONG>Aug 05| </STRONG> Hey everyone, It's been a while. I've been getting ready for the funeral, talking about politics, and ordering DELF & HiSET exam books. I'll write again next week. I don't know if I'll be able to write before then because of everything going on. Wish me luck.</p><br>
+<li><p><STRONG>Aug 11| </STRONG> I've caught a cold yesterday that left me tossing and turning through the night. I woke up to the full moon shining through my bedroom window and thinking 'wow. ...' .</p><br>
+	<p>Have you upgraded bitmessage? You might not be receiving your messages if you haven't.</p><br>
  		</li><br>
 
-	<li><p><STRONG>Jul 29| </STRONG> I haven't written in a few days. Truth be told, I haven't had it in me. My cousin just died in a motorbike accident at 13 years old. There's more, but I'd rather not put it out for the entire world to see. ... <a href="blog/posts/death.html">read more.</a></p><br>
- 		</li><br>
-
-	<li><p><STRONG>Jul 27| </STRONG> I've been so busy I haven't had time to finish writing that lengthy post yet. I promise I will eventually get it done. In other news, I recently bought a pair of GoTenna (PGP encrypted cell phone communication over radio waves). Great if you're lost in the great outdoors. </p><br>
- 		</li><br>
-
-		<li><p><STRONG>Jul 21 | </STRONG>  Reading E.B.'s post on Trolls. Writing a super long post on how to write fiction for all you creatives out there.</p><br>
- 		</li><br>
 </ul>
 <br>
 			</div>
