--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
 
 		<div class='skills'><h2 style="	padding-bottom:1.5em;">Updates</h2>
 <ul>
+	<li><p><STRONG>Aug 14| </STRONG>Still recovering from this cold that's trying to turn into pneumonia.</p><br>
+		<p>Decided it was time to take a martial art. How about bare nuckle boxing and stick fighting?</p><br>
+ 		</li><br>
 
 <li><p><STRONG>Aug 11| </STRONG> I've caught a cold yesterday that left me tossing and turning through the night. I woke up to the full moon shining through my bedroom window and thinking 'wow. ...' .</p><br>
 	<p>Have you upgraded bitmessage? You might not be receiving your messages if you haven't.</p><br>
