--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
 	<nav class='nav'>
  <a href="index.html">Home</a>
  <a href="blog/about.html">About</a>
-  <a href="blog/archive.html">Archive</a>
+ <a href="blog/archive.html">Archive</a>
+ <a href="blog/appreciations.html">Appreciations</a>
 </nav>
 
 	<div style="height: 0.75em; font-size: 5em; padding-top:1em; padding-left: 1em; padding-bottom: 2em;" id="billborad" class='animated pulse'>Meira D.
@@ -23,6 +24,10 @@
 
 		<div class='skills'><h2 style="	padding-bottom:1.5em;">Updates</h2>
 <ul>
+
+	<li>
+		<p><quote>"We've lost the ability to read anonymously. Without anonymity in reading there is no freedom of mind, theres literally slavery. ..." ~ Eben Moglen</quote></p></br><p><STRONG>Aug 18| </STRONG>Catching up on the news. How can so much happen in a week?</p><br>
+ 		</li><br>
 	<li><p><STRONG>Aug 14| </STRONG>Still recovering from this cold that's trying to turn into pneumonia.</p><br>
 		<p>Decided it was time to take a martial art. How about bare nuckle boxing and stick fighting?</p><br>
  		</li><br>
